--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.letstalktech.aahw"
-      android:versionCode="1"
-      android:versionName="1.0">
+    package="org.letstalktech.aahw"
+    android:versionCode="1"
+    android:versionName="0.10" >
 
+    <uses-sdk android:minSdkVersion="7" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-
-
+    <application
+        android:label="@string/app_name" >
     </application>
+
 </manifest>
